add navigation bar

--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Niki Hooshmandnik</title>
-        
+
     </head>
+    <body>
+        <nav>
+            <!--TODO: add links to lis-->
+            <ul>
+                <li>Home</li>
+                <li>Projects</li>
+                <li>Interests</li>
+            </ul>
+        </nav>
+    </body>
 </html>
