add about me section

--- a/index.html
+++ b/index.html
@@ -7,12 +7,25 @@
     </head>
     <body>
         <nav>
-            <!--TODO: add links to lis-->
+            
             <ul>
-                <li>Home</li>
-                <li>Projects</li>
-                <li>Interests</li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="project.html">Projects</a></li>
+                <li><a href="interest.html">Interests</a></li>
             </ul>
         </nav>
+        <main>
+            <h1>Hi! I am Niki Hooshmandnik</h1>
+            <section id="aboutme">
+                <h2>About me</h2>
+                <p>I am a final year computer science student at 
+                    <a href="https://aut.ac.ir/index.php?sid=1&slc_lang=en">Amirkabir University of Technology(Tehran Polytechnic)</a>
+                    and I am passionate about software engineering, human-computer interaction, and solving real-world problems through technology.
+                    I am passionate about teaching and believe in the power of education to transform lives and 
+                    I am actively working as part of a team to reduce inequality in the education system by organizing various events and workshops for high school students, aiming to provide them with equal opportunities to learn and grow.
+                </p>
+
+            </section>
+        </main>
     </body>
 </html>
