--- a/interest.html
+++ b/interest.html
@@ -26,6 +26,14 @@
                 </p>
 
             </section>
+            <section id="hobbies">
+                <h2>Hobbies</h2>
+                <p>
+                    Reading books is something I enjoy as it opens up new perspectives and ideas.
+                    I also like spending time at different cafes with friends, drinking coffee and chatting. 
+                    Swimming is a favorite activity of mine because it helps me relax and clears my mind, all while enjoying the gentle flow of the water.
+                </p>
+            </section>
         </main>
     </body>
 </html>
