--- a/interest.html
+++ b/interest.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Niki Hooshmandnik</title>
+        <link rel="icon" type="image/png" href="IMG_7253.png">
 
     </head>
     <body>
