add Selected project section to the main page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,25 @@
                 </p>
 
             </section>
+            <section id="selectedprojects">
+                <h2>Selected projects</h2>
+                <p><strong>MLP: Implementing MLP from scratch without using libraries</strong>
+                    <br>
+                    Implemented a Multi-Layer Perceptron (MLP) from scratch without using libraries like NumPy, 
+                    TensorFlow or PyTorch to gain a deeper understanding of the inner workings of neural networks.
+                    <br>
+                    <br>
+                    <strong>Encoder-Decoder: Implementing an Encoder-Decoder Model</strong>
+                    <br>
+                    Implemented an Encoder-Decoder model from scratch using PyTorch 
+                    <br>
+                    <br>
+                </p>
+
+                
+            </section>
+
+            
         </main>
     </body>
 </html>
