add Volunteer section to the main page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
                 
             </section>
 
-            
+            <section id="volunteer">
+                <h2>Volunteer</h2>
+                <p>
+                    I served as the co-head and mentor of the education section, helping high school students become familiar with computer science concepts. 
+                    We organized workshops to introduce students to topics in computer science and mathematics, including complex systems, coding, statistics and probability, and optimization. 
+                    These workshops are held with the help of other students in the scientific organization named <a href="https://rastaiha.ir/">Rasta</a>, which annually attracts high school students from all over Iran.
+                </p>
+
+            </section>
         </main>
     </body>
 </html>
