add hobbies section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
                 </p>
 
             </section>
+
+            <section id="hobbies">
+                <h2>Hobbies</h2>
+                <p>
+                    I enjoy reading books, as they allow me to explore new ideas and perspectives. 
+                    I also love trying new cafes, as it combines my passion for discovering unique places with my appreciation for good coffee. 
+                    Additionally, swimming is one of my favorite activities, as it helps me relax and stay active.
+                </p>
+
+            </section>
         </main>
     </body>
 </html>
