add fonts to the project

--- a/interest.html
+++ b/interest.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Niki Hooshmandnik</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Judson:wght@400;700&family=Judson:ital@1&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="IMG_7253.png">
+        <link rel="stylesheet" href="styles.css">
 
     </head>
     <body>
