--- a/interest.html
+++ b/interest.html
@@ -10,34 +10,36 @@
 
     </head>
     <body>
-        <nav>
-            
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="project.html">Projects</a></li>
-                <li><a href="interest.html">Interests</a></li>
-            </ul>
-        </nav>
-        <main>
-            <h1>Interests</h1>
-            <section id="academic_interests">
-                <h2>Academic Interests</h2>
-                <p>
-                    My academic interests include data science, where I work with data to find patterns and insights. 
-                    I also enjoy software engineering because it involves solving problems and building useful tools. 
-                    Human-computer interaction is another area I find interesting, as it focuses on making technology easier and more intuitive to use. 
-                    I like exploring how these fields come together to improve both technology and user experiences.
-                </p>
+        <div class="container">
+            <nav>
+                
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="project.html">Projects</a></li>
+                    <li><a href="interest.html">Interests</a></li>
+                </ul>
+            </nav>
+            <main>
+                <h1>Interests</h1>
+                <section id="academic_interests">
+                    <h2>Academic Interests</h2>
+                    <p>
+                        My academic interests include data science, where I work with data to find patterns and insights. 
+                        I also enjoy software engineering because it involves solving problems and building useful tools. 
+                        Human-computer interaction is another area I find interesting, as it focuses on making technology easier and more intuitive to use. 
+                        I like exploring how these fields come together to improve both technology and user experiences.
+                    </p>
 
-            </section>
-            <section id="hobbies">
-                <h2>Hobbies</h2>
-                <p>
-                    Reading books is something I enjoy as it opens up new perspectives and ideas.
-                    I also like spending time at different cafes with friends, drinking coffee and chatting. 
-                    Swimming is a favorite activity of mine because it helps me relax and clears my mind, all while enjoying the gentle flow of the water.
-                </p>
-            </section>
-        </main>
+                </section>
+                <section id="hobbies">
+                    <h2>Hobbies</h2>
+                    <p>
+                        Reading books is something I enjoy as it opens up new perspectives and ideas.
+                        I also like spending time at different cafes with friends, drinking coffee and chatting. 
+                        Swimming is a favorite activity of mine because it helps me relax and clears my mind, all while enjoying the gentle flow of the water.
+                    </p>
+                </section>
+            </main>
+        </div>
     </body>
 </html>
