--- a/index.html
+++ b/index.html
@@ -71,18 +71,20 @@
                 </section>
                 <section id="contact">
                     <h2>Contact</h2>
-                    <a href="mailto:nikihooshmandnik.nh@gmail.com">
-                        <img src="contact-icons/mail.svg" height="40" width="40">
-                    </a>
-                    <a href="https://github.com/nikihooshmand">
-                        <img src="contact-icons/github.svg" height ="40" width="40">
-                    </a>
-                    <a href="https://www.linkedin.com/in/niki-hooshmand-46a446222/">
-                        <img src="contact-icons/linkedin.svg" height ="40" width="40">
-                    </a>
-                    <a href="https://t.me/Hooshmandnik">
-                        <img src="contact-icons/telegram.svg" height="40" width="40">
-                    </a>
+                    <div class="contact-container">
+                        <a href="mailto:nikihooshmandnik.nh@gmail.com">
+                            <img src="contact-icons/mail.svg" height="40" width="40"  class="contact-icons">
+                        </a>
+                        <a href="https://github.com/nikihooshmand">
+                            <img src="contact-icons/github.svg" height ="40" width="40"  class="contact-icons">
+                        </a>
+                        <a href="https://www.linkedin.com/in/niki-hooshmand-46a446222/">
+                            <img src="contact-icons/linkedin.svg" height ="40" width="40"  class="contact-icons">
+                        </a>
+                        <a href="https://t.me/Hooshmandnik">
+                            <img src="contact-icons/telegram.svg" height="40" width="40"  class="contact-icons">
+                        </a>
+                    </div>
 
                 </section>
             </main>
