add profile picture

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
                     <li><a href="interest.html">Interests</a></li>
                 </ul>
             </nav>
+
             <main>
+                <img src="me.jpg" id="profile">
+
                 <h1>Hi! I am Niki Hooshmandnik</h1>
                 <section id="aboutme">
                     <h2>About me</h2>
