modify navigation bar

--- a/interest.html
+++ b/interest.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="project.html">Projects</a></li>
-                    <li><a href="interest.html">Interests</a></li>
+                    <li class="active"><a href="interest.html">Interests</a></li>
                 </ul>
             </nav>
             <main>
