--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav>
                 
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="project.html">Projects</a></li>
                     <li><a href="interest.html">Interests</a></li>
                 </ul>
@@ -58,7 +58,7 @@
                     <p>
                         I served as the co-head and mentor of the education section, helping high school students become familiar with computer science concepts. 
                         We organized workshops to introduce students to topics in computer science and mathematics, including complex systems, coding, statistics and probability, and optimization. 
-                        These workshops are held with the help of other students in the scientific organization named <a href="https://rastaiha.ir/">Rasta</a>, which annually attracts high school students from all over Iran.
+                        These workshops are held with the help of other students in the scientific organization named <a href="https://rastaiha.ir/">Rasta</a>, which are annually held at Sharif University.
                     </p>
 
                 </section>
@@ -75,16 +75,16 @@
                 <section id="contact">
                     <h2>Contact</h2>
                     <div class="contact-container">
-                        <a href="mailto:nikihooshmandnik.nh@gmail.com">
+                        <a href="mailto:nikihooshmandnik.nh@gmail.com" target="_blank">
                             <img src="contact-icons/mail.svg" height="40" width="40"  class="contact-icons">
                         </a>
-                        <a href="https://github.com/nikihooshmand">
+                        <a href="https://github.com/nikihooshmand" target="_blank">
                             <img src="contact-icons/github.svg" height ="40" width="40"  class="contact-icons">
                         </a>
-                        <a href="https://www.linkedin.com/in/niki-hooshmand-46a446222/">
+                        <a href="https://www.linkedin.com/in/niki-hooshmand-46a446222/" target="_blank">
                             <img src="contact-icons/linkedin.svg" height ="40" width="40"  class="contact-icons">
                         </a>
-                        <a href="https://t.me/Hooshmandnik">
+                        <a href="https://t.me/Hooshmandnik" target="_blank">
                             <img src="contact-icons/telegram.svg" height="40" width="40"  class="contact-icons">
                         </a>
                     </div>
