--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
                 
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="project.html">Projects</a></li>
+                    <li class="active"><a href="project.html">Projects</a></li>
                     <li><a href="interest.html">Interests</a></li>
                 </ul>
             </nav>
