--- a/project.html
+++ b/project.html
@@ -26,15 +26,28 @@
                     
                     <p><strong>MLP: Implementing MLP from scratch without using libraries</strong>
                         <br>
+                        Niki Hooshmandnik, Parinaz Soroori
+                        <br>
                         Implemented a Multi-Layer Perceptron (MLP) from scratch without using libraries like NumPy, 
                         TensorFlow or PyTorch to gain a deeper understanding of the inner workings of neural networks.
                         <br>
+                        <a href="https://github.com/nikihooshmand/DeeplearningCourse/tree/main/Projects/Project2">github link</a>
                         <br>
                         <strong>Encoder-Decoder: Implementing an Encoder-Decoder Model</strong>
                         <br>
+                        Niki Hooshmandnik, Mahdi Vares, Parinaz Soroori 
+                        <br>
                         Implemented an Encoder-Decoder model from scratch using PyTorch 
                         <br>
+                        <a href="https://github.com/nikihooshmand/DeeplearningCourse/tree/main/Projects/Project3">github link</a>
                         <br>
+                        <strong>Perceptron: Implementing perceptron from scratch</strong>
+                        <br>
+                        Niki Hooshmandnik
+                        <br>
+                        Implemented Perceptron from scartch without using libraries.
+                        <br>
+                        <a href="https://github.com/nikihooshmand/DeeplearningCourse/tree/main/Projects/Project1">github link</a>
                     </p>
                     
 
