fix usability issues

--- a/project.html
+++ b/project.html
@@ -11,12 +11,12 @@
     </head>
     <body>
         <div class="container">
-            <nav>
+            <nav aria-label="navigation">
                 
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li class="active"><a href="project.html">Projects</a></li>
-                    <li><a href="interest.html">Interests</a></li>
+                    <li><a href="index.html" aria-label="Homepage">Home</a></li>
+                    <li class="active"><a href="project.html" aria-label="Projects page">Projects</a></li>
+                    <li><a href="interest.html" aria-label="Interests page">Interests</a></li>
                 </ul>
             </nav>
             <main>
