--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Niki Hooshmandnik</title>
         <link href="https://fonts.googleapis.com/css2?family=Judson:wght@400;700&family=Judson:ital@1&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="IMG_7253.png">
+        <link rel="icon" type="image/png" href="IMG_7253.png" alt="profile picture">
         <link rel="stylesheet" href="styles.css">
 
     </head>
     <body>
         <div class="container">
         
-            <nav>
+            <nav aria-label="navigation">
                 
                 <ul>
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="project.html">Projects</a></li>
-                    <li><a href="interest.html">Interests</a></li>
+                    <li class="active"><a href="index.html" aria-label="Homepage">Home</a></li>
+                    <li><a href="project.html" aria-label="Projects page">Projects</a></li>
+                    <li><a href="interest.html" aria-label="Interests page">Interests</a></li>
                 </ul>
             </nav>
 
@@ -28,7 +28,7 @@
                 <section id="aboutme">
                     <h2>About me</h2>
                     <p>I am a final year computer science student at 
-                        <a href="https://aut.ac.ir/index.php?sid=1&slc_lang=en">Amirkabir University of Technology(Tehran Polytechnic)</a>
+                        <a href="https://aut.ac.ir/index.php?sid=1&slc_lang=en" aria-label="Amirkabir University of Technology website">Amirkabir University of Technology(Tehran Polytechnic)</a>
                         and I am passionate about data science, software engineering, human-computer interaction, and solving real-world problems through technology.
                         I am passionate about teaching and believe in the power of education to transform lives and 
                         I am actively working as part of a team to reduce inequality in the education system by organizing various events and workshops for high school students, aiming to provide them with equal opportunities to learn and grow.
@@ -58,7 +58,7 @@
                     <p>
                         I served as the co-head and mentor of the education section, helping high school students become familiar with computer science concepts. 
                         We organized workshops to introduce students to topics in computer science and mathematics, including complex systems, coding, statistics and probability, and optimization. 
-                        These workshops are held with the help of other students in the scientific organization named <a href="https://rastaiha.ir/">Rasta</a>, which are annually held at Sharif University.
+                        These workshops are held with the help of other students in the scientific organization named <a href="https://rastaiha.ir/" aria-label="Rasta organization website">Rasta</a>, which are annually held at Sharif University.
                     </p>
 
                 </section>
@@ -75,16 +75,16 @@
                 <section id="contact">
                     <h2>Contact</h2>
                     <div class="contact-container">
-                        <a href="mailto:nikihooshmandnik.nh@gmail.com" target="_blank">
+                        <a href="mailto:nikihooshmandnik.nh@gmail.com" target="_blank" aria-label="contact info-mail ">
                             <img src="contact-icons/mail.svg" height="40" width="40"  class="contact-icons">
                         </a>
-                        <a href="https://github.com/nikihooshmand" target="_blank">
+                        <a href="https://github.com/nikihooshmand" target="_blank" aria-label = "github profile">
                             <img src="contact-icons/github.svg" height ="40" width="40"  class="contact-icons">
                         </a>
-                        <a href="https://www.linkedin.com/in/niki-hooshmand-46a446222/" target="_blank">
+                        <a href="https://www.linkedin.com/in/niki-hooshmand-46a446222/" target="_blank" aria-label="linkedin profile">
                             <img src="contact-icons/linkedin.svg" height ="40" width="40"  class="contact-icons">
                         </a>
-                        <a href="https://t.me/Hooshmandnik" target="_blank">
+                        <a href="https://t.me/Hooshmandnik" target="_blank" aria-label ="telegram profile">
                             <img src="contact-icons/telegram.svg" height="40" width="40"  class="contact-icons">
                         </a>
                     </div>
