add alt property to image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Niki Hooshmandnik</title>
         <link href="https://fonts.googleapis.com/css2?family=Judson:wght@400;700&family=Judson:ital@1&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="IMG_7253.png" alt="profile picture">
+        <link rel="icon" type="image/png" href="IMG_7253.png" >
         <link rel="stylesheet" href="styles.css">
 
     </head>
@@ -22,7 +22,7 @@
             </nav>
 
             <main>
-                <img src="me.jpg" id="profile">
+                <img src="me.jpg" id="profile" alt="profile picture">
 
                 <h1>Hi! I am Niki Hooshmandnik</h1>
                 <section id="aboutme">
