add alt property to contact icons

--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
                 <section id="contact">
                     <h2>Contact</h2>
                     <div class="contact-container">
-                        <a href="mailto:nikihooshmandnik.nh@gmail.com" target="_blank" aria-label="contact info-mail ">
-                            <img src="contact-icons/mail.svg" height="40" width="40"  class="contact-icons">
+                        <a href="mailto:nikihooshmandnik.nh@gmail.com" target="_blank" aria-label="contact info-mail">
+                            <img src="contact-icons/mail.svg" height="40" width="40"  class="contact-icons" alt="mail icon">
                         </a>
                         <a href="https://github.com/nikihooshmand" target="_blank" aria-label = "github profile">
-                            <img src="contact-icons/github.svg" height ="40" width="40"  class="contact-icons">
+                            <img src="contact-icons/github.svg" height ="40" width="40"  class="contact-icons" alt="github icon">
                         </a>
                         <a href="https://www.linkedin.com/in/niki-hooshmand-46a446222/" target="_blank" aria-label="linkedin profile">
-                            <img src="contact-icons/linkedin.svg" height ="40" width="40"  class="contact-icons">
+                            <img src="contact-icons/linkedin.svg" height ="40" width="40"  class="contact-icons" alt="linkedin icon">
                         </a>
                         <a href="https://t.me/Hooshmandnik" target="_blank" aria-label ="telegram profile">
-                            <img src="contact-icons/telegram.svg" height="40" width="40"  class="contact-icons">
+                            <img src="contact-icons/telegram.svg" height="40" width="40"  class="contact-icons" alt="telegram icon">
                         </a>
                     </div>
 
